// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toolbar /> should render <Toolbar /> correctly when the user is offline 1`] = `
<WithStyles(ForwardRef(Toolbar))
  style={
    Object {
      "paddingTop": "env(safe-area-inset-top)",
    }
  }
>
  <Styled(MuiBox)
    alignItems="center"
    display="flex"
    justifyContent="space-between"
    width="100%"
  >
    <styled.img
      alt="Pomodor logo"
      mdscreen={0}
      src="logo.svg"
    />
    <Memo([object Object])
      data-role="offline-icon"
    />
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Toolbar))>
`;

exports[`<Toolbar /> should render <Toolbar /> correctly when the user is online 1`] = `
<WithStyles(ForwardRef(Toolbar))
  style={
    Object {
      "paddingTop": "env(safe-area-inset-top)",
    }
  }
>
  <Styled(MuiBox)
    alignItems="center"
    display="flex"
    justifyContent="space-between"
    width="100%"
  >
    <styled.img
      alt="Pomodor logo"
      mdscreen={0}
      src="logo.svg"
    />
    <SignIn />
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Toolbar))>
`;
